mainrepo/namespaces/kanboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kanboard
  name: kanboard
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: web
  selector:
    app: kanboard
  type: NodePort
