mainrepo/namespaces/kanboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanboard
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "replatform-gke"
spec:
  defaultBackend:
    service:
      name: kanboard
      port:
        number: 80
